--- a/Proyecto2/src/views/VentanaPrincipal.form
+++ b/Proyecto2/src/views/VentanaPrincipal.form
@@ -83,6 +83,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Generar reportes"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGenerarReportesActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="comboMapas">
       <Properties>
